SDK 2.X staged commit.