@@ -1,6 +1,6 @@
 /*
  * Copyright 2005 Niclas Hedhman
- * Copyright 2005-2006 Stephen J. McConnell.
+ * Copyright 2005-2007 Stephen J. McConnell.
  *
  * Licensed  under the  Apache License,  Version 2.0  (the "License");
  * you may not use  this file  except in  compliance with the License.
@@ -19,25 +19,23 @@
 
 package net.dpml.transit.test;
 
+import dpml.transit.StreamUtils;
+
 import java.io.File;
 import java.io.InputStream;
+import java.io.FileOutputStream;
 import java.net.URI;
 import java.net.URL;
 
 import junit.framework.TestCase;
 
+import net.dpml.transit.ArtifactNotFoundException;
+import net.dpml.transit.LinkManager;
 import net.dpml.transit.Transit;
-import net.dpml.transit.DefaultTransitModel;
-import net.dpml.transit.artifact.ArtifactNotFoundException;
-import net.dpml.transit.link.Link;
-import net.dpml.transit.info.CacheDirective;
-import net.dpml.transit.info.TransitDirective;
-import net.dpml.transit.info.LayoutDirective;
-import net.dpml.transit.info.HostDirective;
-import net.dpml.transit.monitor.LoggingAdapter;
-import net.dpml.transit.model.TransitModel;
 
-import net.dpml.util.StreamUtils;
+import dpml.transit.info.CacheDirective;
+import dpml.transit.info.TransitDirective;
+import dpml.transit.info.HostDirective;
 
 /**
  * LinkTestCase.
@@ -47,13 +45,14 @@ import net.dpml.util.StreamUtils;
 public class LinkTestCase extends TestCase
 {
     static final Transit TRANSIT = setupTransit();
+    static final LinkManager LINK = TRANSIT.getLinkManager();
     
    /**
     * Static Transit setup.
     */
     private static Transit setupTransit()
     {
-        System.setProperty( "java.protocol.handler.pkgs", "net.dpml.transit" );
+        System.setProperty( "java.protocol.handler.pkgs", "dpml.transit" );
         try
         {
             new File( "target/test/cache" ).delete();
@@ -63,12 +62,14 @@ public class LinkTestCase extends TestCase
                 CacheDirective.CACHE_LAYOUT,
                 "file:${user.dir}/target/test/trusted",
                 "classic",
-                new LayoutDirective[0],
                 new HostDirective[0] );
             TransitDirective directive = new TransitDirective( null, cache );
-            LoggingAdapter logger = new LoggingAdapter( "test" );
-            TransitModel model = new DefaultTransitModel( logger, directive );
-            return Transit.getInstance( model );
+            File basedir = new File( System.getProperty( "user.dir" ) );
+            File config = new File( basedir, "target/test/link.config" );
+            FileOutputStream out = new FileOutputStream( config );
+            TransitDirective.encode( directive, out );
+            System.setProperty( "dpml.transit.profile", config.toURI().toASCIIString() );
+            return Transit.getInstance();
         }
         catch( Throwable e )
         {
@@ -87,119 +88,96 @@ public class LinkTestCase extends TestCase
         {
             throw new IllegalStateException( "TRANSIT" );
         }
-    } 
-
-    /**
-     * Creation of a new link testcase.
-     * @param name the test name
-     */
-    public LinkTestCase( String name )
-    {
-        super( name );
     }
-
+    
    /**
     * Test default target value.
     * @exception Exception if an error occurs
     */
-    public void testDefaultValue() throws Exception
+    public void testLinkCreation() throws Exception
     {
-        URL url = new URL( "link:blob:transit/test/aaa/bbb" );
-        Class[] args = new Class[]{Link.class};
-        Link link = (Link) url.getContent( args );
-        URI defUri = URI.create( "artifact:bla:abc/def#142" );
-        URI uri = link.getTargetURI( defUri );
-        assertEquals( "default", defUri, uri );
+        URI link = URI.create( "link:blob:transit/test/aaa/bbb" );
+        URI target = URI.create( "artifact:bla:abc/def#142" );
+        LINK.setTargetURI( link, target );
+        URI value = LINK.getTargetURI( link );
+        assertEquals( "target", target, value );
     }
 
    /**
-    * Test content value.
-    * @exception Exception if an error occurs
-    */ 
-    public void testContentUri() throws Exception
+    * Validate that a content request on a link with the URL class 
+    * argument returns the link URI value.
+    * @exception Exception if an error in test execution occurs
+    */
+    public void testURIContent() throws Exception
     {
-        URI orig = URI.create( "link:blob:transit/test/aaa/bbb" );
-        URL url = orig.toURL();
+        URI link = URI.create( "link:blob:transit/test/aaa/bbb" );
+        URI target = URI.create( "artifact:bla:abc/def#142" );
+        LINK.setTargetURI( link, target );
+        URL url = link.toURL();
         Class[] args = new Class[]{URI.class};
-        URI found = (URI) url.getContent( args );
-        assertEquals( "default", orig, found );
+        URI content = (URI) url.getContent( args );
+        assertEquals( "content", link, content );
     }
 
    /**
-    * Test value assignment.
+    * Test link target reset.
     * @exception Exception if an error occurs
-    */ 
-    public void testSetValue() throws Exception
-    {
-        URL url = new URL( "link:blob:transit/test/aaa/ccc" );
-        Class[] args = new Class[]{Link.class};
-        Link link = (Link) url.getContent( args );
-        URI newUri = URI.create( "artifact:testfile:dpml/test/abc#1.0.1" );
-        link.setTargetURI( newUri );
-
-        url = new URL( "link:blob:transit/test/aaa/ccc" );
-        link = (Link) url.getContent( args );
-        URI defUri = URI.create( "artifact:bla:ccc/ddd#222" );
-        URI uri = link.getTargetURI( defUri );
-
-        assertEquals( "setting", newUri, uri );
-    }
-
-   /**
-    * Test value reset.
-    * @exception Exception if an error occurs
-    */ 
+    */
     public void testResetValue() throws Exception
     {
-        URL url = new URL( "link:blob:transit/test/example" );
-        Class[] args = new Class[]{Link.class};
-        Link link = (Link) url.getContent( args );
-        URI newUri = URI.create( "artifact:testfile:dpml/test/abc#1.0" );
-        link.setTargetURI( newUri );
-        URI newerUri = URI.create( "artifact:testfile:dpml/test/abc#2.0" );
-        link.setTargetURI( newerUri );
+        // create initial link
+        
+        URI link = URI.create( "link:blob:transit/test/example" );
+        URI target = URI.create( "artifact:testfile:dpml/test/abc#1.0" );
+        LINK.setTargetURI( link, target );
+        URI value = LINK.getTargetURI( link );
+        assertEquals( "target", target, value );
+        
+        // reset the link to a new target
+        
+        URI alt = URI.create( "artifact:testfile:dpml/test/abc#2.0" );
+        LINK.setTargetURI( link, alt );
+        URI newValue = LINK.getTargetURI( link );
+        assertEquals( "target", alt, newValue );
     }
 
    /**
     * Test get value.
     * @exception Exception if an error occurs
-    */ 
-    public void testGetValue() throws Exception
+    */
+    public void testInputStrreamValue() throws Exception
     {
-        URL url = new URL( "link:blob:transit/test/aaa/xxx" );
-        Class[] args = new Class[]{Link.class};
-        Link link = (Link) url.getContent( args );
-        URI newUri = URI.create( "artifact:testfile:dpml/test/abc#1.0.1" );
-        link.setTargetURI( newUri );
-
-        url = new URL( "link:blob:transit/test/aaa/xxx" );
-        URL original = newUri.toURL();
-        InputStream in1 = url.openConnection().getInputStream();
-        InputStream in2 = original.openConnection().getInputStream();
-        assertTrue( "different content", StreamUtils.compareStreams( in1, in2 ) );
+        URI link = URI.create( "link:blob:transit/test/aaa/xxx" );
+        URI targetUri = URI.create( "artifact:testfile:dpml/test/abc#1.0.1" );
+        LINK.setTargetURI( link, targetUri );
+        
+        URL linkURL = link.toURL();
+        URL targetURL = targetUri.toURL();
+        
+        InputStream linkIs = linkURL.openConnection().getInputStream();
+        InputStream targetIS = targetURL.openConnection().getInputStream();
+        assertTrue( "different content", StreamUtils.compareStreams( linkIs, targetIS ) );
     }
-
+    
    /**
     * Test illegal link artifact.
     * @exception Exception if an error occurs
-    */ 
+    */
     public void testIllegalArtifact()
         throws Exception
     {
-        URL url = new URL( "link:blob:transit/test/errors/aaa" );
-        Class[] args = new Class[]{Link.class};
-        URI newUri = URI.create( "artifact:abc:does/not/exist" );
+        URI link = URI.create( "link:blob:transit/test/errors/aaa" );
+        URI targetUri = URI.create( "artifact:abc:does/not/exist" );
+        LINK.setTargetURI( link, targetUri );
+        URL url = link.toURL();
         try
         {
-            Link link = (Link) url.getContent( args );
-            link.setTargetURI( newUri );
             url.getContent();
             fail( "ArtifactNotFoundException was not thrown." );
         } 
         catch( ArtifactNotFoundException e )
         {
-            // should throw an exception if we try to read against a
-            // non existent artifact.
+            // success
         }
     }
 }
